fix for scrollbar on demand

--- a/src/less/shipyard.less
+++ b/src/less/shipyard.less
@@ -81,6 +81,7 @@ table.shipyard-table{
 .content-wrapper{
   display: inline-block;
   margin: 0 auto;
+  max-width: 100%;
 }
 
 .table-tools{
